--- a/css/_navBar.scss
+++ b/css/_navBar.scss
@@ -1,6 +1,6 @@
 .navbarContainer {
   padding: 10px;
-  margin-right: 20px;
+  margin-right: 30px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -26,4 +26,11 @@
   border: 1px solid black;
   background-color: #0077c5;
   padding: 5px;
+  text-align: center;
+
+  &__lock {
+    height: 13px;
+    padding-right: 5px;
+  }
 }
+
