--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ table {
 
 .navbarContainer {
   padding: 10px;
-  margin-right: 20px;
+  margin-right: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -167,6 +167,12 @@ table {
   border: 1px solid black;
   background-color: #0077c5;
   padding: 5px;
+  text-align: center;
+}
+
+.navBarbutton__lock {
+  height: 13px;
+  padding-right: 5px;
 }
 
 body {
