--- a/css/_navBar.scss
+++ b/css/_navBar.scss
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   color: rgb(94, 94, 94);
 
@@ -15,6 +14,7 @@
 
   &__link {
     color: #0077c5;
+    text-decoration: none;
   }
 }
 
@@ -33,4 +33,3 @@
     padding-right: 5px;
   }
 }
-
