--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,6 @@ table {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   color: #5e5e5e;
 }
@@ -157,6 +156,7 @@ table {
 
 .navbarContainer__link {
   color: #0077c5;
+  text-decoration: none;
 }
 
 .navBarbutton {
@@ -210,7 +210,7 @@ table {
           flex-direction: row;
   text-decoration: none;
   color: #5e5e5e;
-  font-size: 20px;
+  font-size: 19px;
   padding: 5px;
 }
 
@@ -223,13 +223,32 @@ table {
   width: 400px;
   max-width: 920px;
   margin: 0 auto;
-  outline: 1px solid red;
+  outline: 1px solid lightgrey;
   background-color: white;
+  text-align: center;
+}
+
+.formBody__title {
+  padding-top: 35px;
+  padding-bottom: 20px;
+  font-size: 24px;
+}
+
+.formBody__description {
+  font-size: 14px;
+  padding-bottom: 25px;
+}
+
+.--link {
+  font-size: 12px;
+  color: #0077c5;
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   position: relative;
   background-color: #eceef1;
+  color: #5e5e5e;
 }
 
 .mainContainer {
