--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,10 @@
 @import "form";
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   position: relative;
   background-color: #eceef1;
+  color: rgb(94, 94, 94);
 }
 
 .mainContainer {
