--- a/css/main.css
+++ b/css/main.css
@@ -239,9 +239,28 @@ table {
   padding-bottom: 25px;
 }
 
+.formBody__footer {
+  width: 400px;
+  height: 60px;
+  background-color: #eceef1;
+}
+
+.formBody__fields {
+  display: block;
+  text-align: left;
+}
+
+.email {
+  display: block;
+}
+
 .--link {
   font-size: 12px;
   color: #0077c5;
+}
+
+.input {
+  padding-left: 20px;
 }
 
 body {
