--- a/css/main.css
+++ b/css/main.css
@@ -261,6 +261,54 @@ table {
 
 .input {
   padding-left: 20px;
+  padding-bottom: 20px;
+}
+
+.input__inputBar {
+  width: 360px;
+  height: 30px;
+  border-radius: 2px;
+  border: 1px solid lightgrey;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+.formLabel {
+  padding-left: 20px;
+  font-size: 14px;
+}
+
+.formMiniMessage {
+  font-size: 10px;
+  padding-bottom: 5px;
+}
+
+.--formButtom {
+  font-size: 16px;
+  margin-top: 20px;
+  margin-left: 20px;
+  width: 360px;
+  height: 50px;
+  border-color: white;
+}
+
+.formInfo {
+  font-size: 13px;
+  font-style: italic;
+  padding: 50px;
+  line-height: 22px;
+  color: slategray;
+}
+
+.--formImg {
+  width: 16px;
+  height: 18px;
+}
+
+.--formFootText {
+  font-size: 11px;
+  padding-top: 25px;
+  color: slategray;
 }
 
 body {
