--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,28 @@ table {
   color: slategray;
 }
 
+.footerLinks {
+  text-align: center;
+  padding-top: 25px;
+}
+
+.footerLinks__grey {
+  color: #4d5257;
+  text-decoration: none;
+  font-size: 13px;
+  padding: 2px;
+  margin: 15px 2px;
+}
+
+.footerNotice {
+  text-align: center;
+  font-size: 13px;
+  line-height: 18px;
+  color: #4d5257;
+  padding: 5px;
+  padding-bottom: 20px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
