--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,7 @@ table {
   background-color: #0077c5;
   padding: 5px;
   text-align: center;
+  cursor: pointer;
 }
 
 .navBarbutton__lock {
@@ -265,7 +266,7 @@ table {
 }
 
 .input__inputBar {
-  width: 360px;
+  width: 357px;
   height: 30px;
   border-radius: 2px;
   border: 1px solid lightgrey;
